# react-native-mpv

./: .gitignore  .rgignore  App.tsx  BasicSurfaceViewManager.tsx  LICENSE  README.md  app.json  package-lock.json  package.json  react-native-mpv.podspec  tsconfig.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: _BUCK  build.gradle
android/app/src/debug/java/com/react_native_mpv/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/jni/: MainComponentsRegistry.h  jni_utils.cpp  jni_utils.h
android/app/src/main/jni/react/: CMakeLists.txt  MainApplicationTurboModuleManagerDelegate.h
android/app/src/main/jniLibs/: arm64-v8a  armeabi-v7a
android/app/src/main/res/values/: strings.xml  styles.xml
android/src/main/: AndroidManifest.xml
android/src/main/java/com/mpv/: MPVLib.java  MpvPackage.java  MpvViewManager.java  VideoEventObserver.java  VideoSurface.java
android/src/main/jni/: CMakeLists.txt  jni_utils.cpp  jni_utils.h
buildscripts/: .gitignore  android-sdk-linux  buildall.sh  download.sh
buildscripts/include/: download-sdk.sh
buildscripts/prefix/: arm64-v8a  armeabi-v7a
buildscripts/scripts/: ffmpeg.sh
components/: BasicView.tsx
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/MpvExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/MpvExample.xcodeproj/: project.pbxproj
example/ios/MpvExample.xcodeproj/xcshareddata/xcschemes/: MpvExample.xcscheme
example/ios/MpvExampleTests/: MpvExampleTests.m
example/src/: App.tsx
ios/: MpvViewManager.m  Podfile
ios/Helloworld.xcworkspace/: contents.xcworkspacedata
ios/Mpv.xcodeproj/: project.pbxproj
ios/react_native_mpv/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/react_native_mpv.xcodeproj/: project.pbxproj
ios/react_native_mpv.xcodeproj/xcshareddata/xcschemes/: react_native_mpv.xcscheme
ios/react_native_mpvTests/: react_native_mpvTests.m
src/: index.tsx
(+18 files in other folders)
